# OpenGLExample

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
imgui/: CMakeLists.txt
sysconfig/: SysConfig.h.in
tchGeneral/: CMakeLists.txt
tchMain/: CMakeLists.txt
tchMain/inc/debug/: Logger.h
tchMain/inc/gl/: GLFuncs.h  Shader.h
tchMain/inc/sys/: Global.h
tchMain/src/debug/: Logger.cpp
tchMain/src/gl/: GLFuncs.cpp  Shader.cpp
tchMain/src/sys/: Global.cpp  main.cpp
tchPlatform/: CMakeLists.txt
